--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <span style="color: black;font-size: 13px;">To detect the object,first an input should be given in the input box.the input should match with the cocossd finding,then only it will detect
 </span></h1>
 <h3>Object Name: </h3>
-<input type="text" class="form-control id=object" style="width: 30% ;">
+<input type="text" class="form-control "id="object" style="width: 30% ;">
 <br><br>
-<button class="btn btn-success" id="start" onclick="Start()">Start</button>
+<button class="btn btn-success" id="start" onclick="start()">Start</button>
 <br><br>
 <h3 class="btn btn-warning" id="num_obj"></h3>
 <h3 class="btn btn-danger" id="status"></h3>
